@startuml

class OrderVO{
-Long orderId;
-OrderType type;
-Long totalFee;
-Long payedFee;
-Long refundFee;//已退金额
}

class ItemOrderVO{
-OrderStatus status;
}

class SubOrderVO{
-Long subOrderId;
-Long orderId;
-Long refundFee;//已退金额
}

class SubItemOrderVO{
-ProductVO product;
-Integer number;
-OrderStatus subOrderStatus;
}

class SenderVO{
-Long senderId;//发件单位ID
-String webSite;//分站
-String topic;//主题
}

class LogisticsVO{
-Long id;
-Long addressId;//地址
-String courierNumber;//快递单号
-Long templateId;//物流模板ID
}

class MetarialVO{
-Long id;
-String name;
-Integer size;//尺寸
-Long price;//价格
}

class ServiceVO{
-Long id;//主键
-Long price;//费用
-String text;//服务描述
-Integer flag;//服务标识
}


OrderVO <|-- ItemOrderVO
SubOrderVO <|-- SubItemOrderVO

ItemOrderVO *-- SubItemOrderVO
ItemOrderVO --o ServiceVO

ItemOrderVO --o SenderVO
ItemOrderVO --o MetarialVO
ItemOrderVO --o LogisticsVO


@enduml